--- a/.gitignore
+++ b/.gitignore
@@ -260,7 +260,10 @@ paket-files/
 __pycache__/
 *.pyc
 
+#Don't commit secrets
+SpotifyStats/appsettings.Secrets.json
+
 #Api Deplyoment Artifacts
 SpotifyStats/site.zip
 SpotifyStats/site/
-SpotifyStats/spotify-stats.zip
+SpotifyStats/spotify-stats-deploy.zip
